--- a/index.html
+++ b/index.html
@@ -10,45 +10,193 @@
 <body>
     <header>
         <nav>
-            <a href="#home">CARA
-                <img src=".\assets\UX-HTML-CSS\icons8-pottery-96.png"
-                />CARA
-            </a>
             <ul>
                 <li><a href="#home">HOME</a></li>
                 <li><a href="#about">ABOUT</a></li>
                 <li><a href="#products">PRODUCTS</a></li>
                 <li><a href="#contact">CONTACT</a></li>
+                <a href="#home">CARA
+                    <img src=".\assets\UX-HTML-CSS\icons8-pottery-96.png"
+                    alt="logo"
+                    />CARA
+                </a>
+                <li><a href="#cart">CART</a></li>
                 <!-- # points to ids within html-->
                 <!-- . points to classes within html -->
-            </ul>
+                <hr> 
     </nav>
     </header>
     <main>
         <section class="home" id="home">
-            <p>Welcome to our website's home section! Buy stuff us and move along</p>
+            <img src="assets/UX-HTML-CSS/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg">
+            <h1>CERAMICS CRAFTED BY HAND...</h1>
+            <h1>...FROM THE GROUND UP</h1>
         </section>
         <section class="about" id="about">
-            <p>We are an amazing ceramics page selling lorem ipsi.</p>
+            <h1>ABOUT US</h1>
+            <hr>
+            <img 
+                src=".\assets\UX-HTML-CSS\linh-le-a0rE64YJDA4-unsplash.jpg"
+                alt="Pottery One"
+            />
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque laoreet suspendisse interdum consectetur libero id faucibus nisl tincidunt. Facilisis mauris sit amet massa. Senectus et netus et malesuada fames ac turpis egestas maecenas. Odio aenean sed adipiscing diam donec adipiscing tristique risus nec. Sagittis id consectetur purus ut faucibus. Elit duis tristique sollicitudin nibh sit amet commodo. </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque laoreet suspendisse interdum consectetur libero id faucibus nisl tincidunt. Facilisis mauris sit amet massa. Senectus et netus et malesuada fames ac turpis egestas maecenas.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque laoreet suspendisse interdum consectetur libero id faucibus nisl tincidunt. Facilisis mauris sit amet massa. Senectus et netus et malesuada fames ac turpis egestas maecenas. Odio aenean sed adipiscing diam donec adipiscing tristique risus nec. Sagittis id consectetur purus ut faucibus.</p>
+            <img 
+                src=".\assets\UX-HTML-CSS\neo-v69Rgy8pPyk-unsplash.jpg"
+                alt="Pottery Two"
+            />
         </section>
         <section class="products" id="products">
-            <div class="product">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?</div>
-            <div class="product">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?</div>
-            <div class="product">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?</div>
-            <div class="product">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?</div>
-            <div class="product">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?</div>
-            <div class="product">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?</div>
-            <div class="product">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?</div>
-            <div class="product">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?</div>
-            <div class="product">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?</div>
-            <div class="product">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?</div>
+            <h1>PRODUCTS</h1>
+            <hr>
+            <div class="product">
+                <img 
+                    src=".\assets\UX-HTML-CSS\tom-crew-7HuTGlUfQSo-unsplash.jpg" 
+                    alt="Pottery Three"
+                />
+                <h2>MUNDO BOWLS</h2>
+                <h2>$48.00</h2>
+                <hr>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?
+                </p>
+                <h4>LEARN MORE</h4>
+                <h3>ADD TO CART</h3>
+            </div>
+            <div class="product">
+                <img 
+                    src=".\assets\UX-HTML-CSS\oriento-maVIpNNtmlQ-unsplash.jpg" 
+                    alt="Pottery Four"
+                />
+                <h2>NATUREZA VASE</h2>
+                <h2>$37.00</h2>
+                <hr>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?
+                </p>
+                <h4>LEARN MORE</h4>
+                <h3>ADD TO CART</h3>
+            </div><div class="product">
+                <img 
+                    src=".\assets\UX-HTML-CSS\tom-crew-bgIO-u4GEfI-unsplash.jpg" 
+                    alt="Pottery Five"
+                />
+                <h2>FEIRA BOWLS</h2>
+                <h2>$29.00</h2>
+                <hr>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?
+                </p>
+                <h4>LEARN MORE</h4>
+                <h3>ADD TO CART</h3>
+            </div><div class="product">
+                <img 
+                    src=".\assets\UX-HTML-CSS\tom-crew-3uwu5K0RtaE-unsplash.jpg" 
+                    alt="Pottery Six"
+                />
+                <h2>NATUREZA POTS</h2>
+                <h2>$59.00</h2>
+                <hr>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?
+                </p>
+                <h4>LEARN MORE</h4>
+                <h3>ADD TO CART</h3>
+            </div><div class="product">
+                <img 
+                    src=".\assets\UX-HTML-CSS\linh-le-a0rE64YJDA4-unsplash.jpg" 
+                    alt="Pottery Seven"
+                />
+                <h2>PEDRA VASE</h2>
+                <h2>$31.00</h2>
+                <hr>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?
+                </p>
+                <h4>LEARN MORE</h4>
+                <h3>ADD TO CART</h3>
+            </div><div class="product">
+                <img 
+                    src=".\assets\UX-HTML-CSS\tom-crew-oiZAQvxTcYQ-unsplash.jpg" 
+                    alt="Pottery Eight"
+                />
+                <h2>VIAJA POTS</h2>
+                <h2>$57.00</h2>
+                <hr>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?
+                </p>
+                <h4>LEARN MORE</h4>
+                <h3>ADD TO CART</h3>
+            </div><div class="product">
+                <img 
+                    src=".\assets\UX-HTML-CSS\tom-crew-YA2E3d7a9Wo-unsplash.jpg" 
+                    alt="Pottery Nine"
+                />
+                <h2>SERVICO PLATES</h2>
+                <h2>$35.00</h2>
+                <hr>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?
+                </p>
+                <h4>LEARN MORE</h4>
+                <h3>ADD TO CART</h3>
+            </div><div class="product">
+                <img 
+                    src=".\assets\UX-HTML-CSS\oriento-l0ah3UBLppo-unsplash.jpg" 
+                    alt="Pottery Nine"
+                />
+                <h2>CAMPEAO VASE</h2>
+                <h2>$37.00</h2>
+                <hr>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?
+                </p>
+                <h4>LEARN MORE</h4>
+                <h3>ADD TO CART</h3>
+            </div><div class="product">
+                <img 
+                src=".\assets\UX-HTML-CSS\tom-crew-SITGdvztUdg-unsplash.jpg" 
+                alt="Pottery Nine"
+                />
+                <h2>TROCA BOWLS</h2>
+                <h2>$25.00</h2>
+                <hr>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?
+                </p>
+                <h4>LEARN MORE</h4>
+                <h3>ADD TO CART</h3>
+            </div>
         </section>
         <section class="contact" id="contact">
-            <p>Please contact us for additional information.</p>
+            <h1>CONTACT US</h1>
+            <hr>
+            <form>
+                <label for="email">EMAIL</label><br>
+                <input type="text" id="email" name="email" value=""><br>
+                <label for="message">MESSAGE</label><br>
+                <input type="text" id="email" name="email" value="">
+            </form>
+            <h4>SEND</h4>
         </section>
     </main>
     <footer>
-        eCommerce Website Placeholder Information
+        <img 
+            src=".\assets\UX-HTML-CSS\icons8-youtube-96.png" 
+            alt="YouTube"
+        />
+        <img 
+            src=".\assets\UX-HTML-CSS\icons8-facebook-96 (1).png" 
+            alt="Facebook"
+        />
+        <img 
+            src=".\assets\UX-HTML-CSS\icons8-pottery-96 (1).png" 
+            alt="Logo"
+        />
+        <img 
+            src=".\assets\UX-HTML-CSS\icons8-twitter-96.png" 
+            alt="Twitter"
+        />
+        <img 
+            src=".\assets\UX-HTML-CSS\icons8-instagram-96.png" 
+            alt="Instagram"
+        />
+        <p>Lorem ipsum dolor sit amet.</p>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <p>©Copyright 2015</p>
     </footer>
 </body>
 </html>
