Finetuned the HTML page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     alt="logo"
                     />CARA
                 </a>
-                <li><a href="#cart">CART</a></li>
+                <li>c</li>
                 <!-- # points to ids within html-->
                 <!-- . points to classes within html -->
                 <hr> 
@@ -28,12 +28,12 @@
     </header>
     <main>
         <section class="home" id="home">
-            <img src="assets/UX-HTML-CSS/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg">
+            <a href="#home"><img src="assets/UX-HTML-CSS/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg"></a>
             <h1>CERAMICS CRAFTED BY HAND...</h1>
             <h1>...FROM THE GROUND UP</h1>
         </section>
         <section class="about" id="about">
-            <h1>ABOUT US</h1>
+            <h1><a href="#">ABOUT US</a></h1>
             <hr>
             <img 
                 src=".\assets\UX-HTML-CSS\linh-le-a0rE64YJDA4-unsplash.jpg"
@@ -48,121 +48,121 @@
             />
         </section>
         <section class="products" id="products">
-            <h1>PRODUCTS</h1>
+            <h1><a href="#">PRODUCTS</a></h1>
             <hr>
             <div class="product">
                 <img 
                     src=".\assets\UX-HTML-CSS\tom-crew-7HuTGlUfQSo-unsplash.jpg" 
                     alt="Pottery Three"
                 />
-                <h2>MUNDO BOWLS</h2>
+                <h2><a href="#">MUNDO BOWLS</a></h2>
                 <h2>$48.00</h2>
                 <hr>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?
                 </p>
-                <h4>LEARN MORE</h4>
-                <h3>ADD TO CART</h3>
+                <h4><a href="#">LEARN MORE</a></h4>
+                <h3><a href="#">ADD TO CART</a></h3>
             </div>
             <div class="product">
                 <img 
                     src=".\assets\UX-HTML-CSS\oriento-maVIpNNtmlQ-unsplash.jpg" 
                     alt="Pottery Four"
                 />
-                <h2>NATUREZA VASE</h2>
+                <h2><a href="#">NATUERZA VASE</a></h2>
                 <h2>$37.00</h2>
                 <hr>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?
                 </p>
-                <h4>LEARN MORE</h4>
-                <h3>ADD TO CART</h3>
+                <h4><a href="#">LEARN MORE</a></h4>
+                <h3><a href="#">ADD TO CART</a></h3>
             </div><div class="product">
                 <img 
                     src=".\assets\UX-HTML-CSS\tom-crew-bgIO-u4GEfI-unsplash.jpg" 
                     alt="Pottery Five"
                 />
-                <h2>FEIRA BOWLS</h2>
+                <h2><a href="#">FEIRA BOWLS</a></h2>
                 <h2>$29.00</h2>
                 <hr>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?
                 </p>
-                <h4>LEARN MORE</h4>
-                <h3>ADD TO CART</h3>
+                <h4><a href="#">LEARN MORE</a></h4>
+                <h3><a href="#">ADD TO CART</a></h3>
             </div><div class="product">
                 <img 
                     src=".\assets\UX-HTML-CSS\tom-crew-3uwu5K0RtaE-unsplash.jpg" 
                     alt="Pottery Six"
                 />
-                <h2>NATUREZA POTS</h2>
+                <h2><a href="#">NATUREZA POTS</a></h2>
                 <h2>$59.00</h2>
                 <hr>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?
                 </p>
-                <h4>LEARN MORE</h4>
-                <h3>ADD TO CART</h3>
+                <h4><a href="#">LEARN MORE</a></h4>
+                <h3><a href="#">ADD TO CART</a></h3>
             </div><div class="product">
                 <img 
                     src=".\assets\UX-HTML-CSS\linh-le-a0rE64YJDA4-unsplash.jpg" 
                     alt="Pottery Seven"
                 />
-                <h2>PEDRA VASE</h2>
+                <h2><a href="#">PEDRA VASE</a></h2>
                 <h2>$31.00</h2>
                 <hr>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?
                 </p>
-                <h4>LEARN MORE</h4>
-                <h3>ADD TO CART</h3>
+                <h4><a href="#">LEARN MORE</a></h4>
+                <h3><a href="#">ADD TO CART</a></h3>
             </div><div class="product">
                 <img 
                     src=".\assets\UX-HTML-CSS\tom-crew-oiZAQvxTcYQ-unsplash.jpg" 
                     alt="Pottery Eight"
                 />
-                <h2>VIAJA POTS</h2>
+                <h2><a href="#">VIAJA POTS</a></h2>
                 <h2>$57.00</h2>
                 <hr>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?
                 </p>
-                <h4>LEARN MORE</h4>
-                <h3>ADD TO CART</h3>
+                <h4><a href="#">LEARN MORE</a></h4>
+                <h3><a href="#">ADD TO CART</a></h3>
             </div><div class="product">
                 <img 
                     src=".\assets\UX-HTML-CSS\tom-crew-YA2E3d7a9Wo-unsplash.jpg" 
                     alt="Pottery Nine"
                 />
-                <h2>SERVICO PLATES</h2>
+                <h2><a href="#">SERVICO PLATES</a></h2>
                 <h2>$35.00</h2>
                 <hr>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?
                 </p>
-                <h4>LEARN MORE</h4>
-                <h3>ADD TO CART</h3>
+                <h4><a href="#">LEARN MORE</a></h4>
+                <h3><a href="#">ADD TO CART</a></h3>
             </div><div class="product">
                 <img 
                     src=".\assets\UX-HTML-CSS\oriento-l0ah3UBLppo-unsplash.jpg" 
                     alt="Pottery Nine"
                 />
-                <h2>CAMPEAO VASE</h2>
+                <h2><a href="#">CAMPEAO VASE</a></h2>
                 <h2>$37.00</h2>
                 <hr>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?
                 </p>
-                <h4>LEARN MORE</h4>
-                <h3>ADD TO CART</h3>
+                <h4><a href="#">LEARN MORE</a></h4>
+                <h3><a href="#">ADD TO CART</a></h3>
             </div><div class="product">
                 <img 
                 src=".\assets\UX-HTML-CSS\tom-crew-SITGdvztUdg-unsplash.jpg" 
                 alt="Pottery Nine"
                 />
-                <h2>TROCA BOWLS</h2>
+                <h2><a href="#">TROCA BOWLS</a></h2>
                 <h2>$25.00</h2>
                 <hr>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta voluptatum excepturi explicabo quis consequuntur?
                 </p>
-                <h4>LEARN MORE</h4>
-                <h3>ADD TO CART</h3>
+                <h4><a href="#">LEARN MORE</a></h4>
+                <h3><a href="#">ADD TO CART</a></h3>
             </div>
         </section>
         <section class="contact" id="contact">
-            <h1>CONTACT US</h1>
+            <h1><a href="#">CONTACT US</a></h1>
             <hr>
             <form>
                 <label for="email">EMAIL</label><br>
